Fixed styles property values

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+.pointer {
+  cursor: pointer;
+}
+
+.fa-1-5x {
+  font-size: 1.25em;
+}
