--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -42,6 +42,9 @@
         <mat-error *ngIf="registerForm.hasError('minlength', 'uniqueCitizenNumber')">
           Unique Citizen Number must be <strong>10 characters</strong>
         </mat-error>
+        <mat-error *ngIf="registerForm.hasError('maxlength', 'uniqueCitizenNumber')">
+          Unique Citizen Number must be <strong>10 characters</strong>
+        </mat-error>
       </mat-form-field>
 
       <mat-form-field>
@@ -67,9 +70,12 @@
 
       <mat-form-field *ngIf="role === 'student'">
         <mat-label for="age">Age</mat-label>
-        <input matInput formControlName="age" name="age" type="number"/>
+        <input matInput formControlName="age" name="age" type="number" min="16"/>
         <mat-error *ngIf="registerForm.hasError('required', 'age')">
           Age is <strong>required</strong>
+        </mat-error>
+        <mat-error *ngIf="registerForm.hasError('min', 'age')">
+          Age must be at least <strong>16</strong>
         </mat-error>
       </mat-form-field>
 
@@ -80,12 +86,12 @@
           name="degree"
           placeholder="Choose"
         >
-          <mat-option value="BSC">BSc</mat-option>
-          <mat-option value="MSC">MSc</mat-option>
+          <mat-option value="BACHELOR">Bachelor</mat-option>
+          <mat-option value="MASTERS">Masters</mat-option>
           <mat-option value="PHD">PhD</mat-option>
         </mat-select>
         <mat-error *ngIf="registerForm.hasError('required', 'degree')">
-          Name is <strong>required</strong>
+          Degree is <strong>required</strong>
         </mat-error>
       </mat-form-field>
       <button class="btn btn-success mt-3 pl-5 pr-5" type="submit">Register</button>
