--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="text-center pt-5">
   <h4 class="mb-5">User Dashboard</h4>
   <div *ngIf="userService.getRoles().includes('ROLE_TEACHER') && !userService.getRoles().includes('ROLE_ADMIN')">
-
+    <app-teachers-courses></app-teachers-courses>
   </div>
 </div>
