--- a/src/app/teacher/teachers-courses/teachers-courses.component.html
+++ b/src/app/teacher/teachers-courses/teachers-courses.component.html
@@ -1,1 +1,24 @@
-<p>teachers-courses works!</p>
+<div class="w-50 container-fluid mt-5">
+  <h4 class="text-center mt-5 mb-5">My Courses</h4>
+  <table class="table table-bordered table-hover">
+    <thead class="thead-dark">
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Course</th>
+      <th scope="col">Total hours</th>
+      <th scope="col" *ngIf="userService.getRoles().includes('ROLE_TEACHER')">Average Grade</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr class="pointer" *ngFor="let course of courses" [routerLink]="'/courses/' + course.id">
+      <th scope="row">{{ course.id }}</th>
+      <td>{{ course.name }}</td>
+      <td>{{ course.totalHours }}</td>
+      <td *ngIf="userService.getRoles().includes('ROLE_TEACHER')">
+        {{ course.averageGrade ?  course.averageGrade : 'None' }}
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+
