--- a/src/app/teacher/teachers-courses/teachers-courses.component.html
+++ b/src/app/teacher/teachers-courses/teachers-courses.component.html
@@ -1,5 +1,6 @@
 <div class="w-50 container-fluid mt-5">
   <h4 class="text-center mt-5 mb-5">My Courses</h4>
+  <app-filter (eventEmitter)="searchValue=$event"></app-filter>
   <table class="table table-bordered table-hover">
     <thead class="thead-dark">
     <tr>
@@ -10,7 +11,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr class="pointer" *ngFor="let course of courses" [routerLink]="'/courses/' + course.id">
+    <tr class="pointer" *ngFor="let course of (courses | filter: searchValue)" [routerLink]="'/courses/' + course.id">
       <th scope="row">{{ course.id }}</th>
       <td>{{ course.name }}</td>
       <td>{{ course.totalHours }}</td>
