Added pipe for the grade. Added courses component for the student dashboard.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,4 +6,5 @@
   <div *ngIf="!userService.getRoles().includes('ROLE_TEACHER') && !userService.getRoles().includes('ROLE_ADMIN')">
     <app-average-grade></app-average-grade>
   </div>
+  <app-courses></app-courses>
 </div>
