--- a/src/app/student/average-grade/average-grade.component.html
+++ b/src/app/student/average-grade/average-grade.component.html
@@ -1,7 +1,7 @@
 <div class="container w-25 text-center">
   <div class="row mt-3 alert alert-info" *ngIf="averageGrade">
     <span class="text-info">
-      Your average grade is {{ averageGrade}}
+      Your average grade is {{ averageGrade | grade}}
     </span>
   </div>
   <div class="row mt-3 alert alert-danger" *ngIf="errors">
@@ -10,4 +10,3 @@
     </span>
   </div>
 </div>
-
