--- a/src/app/course/courses/courses.component.html
+++ b/src/app/course/courses/courses.component.html
@@ -1,1 +1,26 @@
-<p>courses works!</p>
+<div class="w-50 container-fluid mt-5">
+  <h4 class="text-center mt-5 mb-5">Courses</h4>
+  <app-filter (eventEmitter)="searchValue=$event"></app-filter>
+  <table class="table table-bordered table-hover">
+    <thead class="thead-dark">
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Course</th>
+      <th scope="col">Total hours</th>
+      <th scope="col">Teacher</th>
+      <th scope="col" *ngIf="userService.getRoles().includes('ROLE_ADMIN')">Average Grade</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr class="pointer" *ngFor="let course of (courses | filter: searchValue)" [routerLink]="'/courses/' + course.id">
+      <th scope="row">{{ course.id }}</th>
+      <td>{{ course.name }}</td>
+      <td>{{ course.totalHours }}</td>
+      <td>{{ course.teacherName ? course.teacherName : "None" }}</td>
+      <td *ngIf="userService.getRoles().includes('ROLE_ADMIN')">
+        {{ course.averageGrade ?  (course.averageGrade | grade) : 'None' }}
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
