--- a/src/app/teacher/teachers-courses/teachers-courses.component.html
+++ b/src/app/teacher/teachers-courses/teachers-courses.component.html
@@ -11,7 +11,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr class="pointer" *ngFor="let course of (courses | filter: searchValue)" [routerLink]="'/courses/' + course.id">
+    <tr class="pointer" *ngFor="let course of (courses | filter: searchValue)" [routerLink]="['/courses/' + course.name]">
       <th scope="row">{{ course.id }}</th>
       <td>{{ course.name }}</td>
       <td>{{ course.totalHours }}</td>
