--- a/src/app/course/add-teacher/add-teacher.component.html
+++ b/src/app/course/add-teacher/add-teacher.component.html
@@ -1,1 +1,31 @@
-<p>add-teacher works!</p>
+<div class="pl-5 pr-5 pb-5 pt-3">
+  <h4 class="text-center mt-5 mb-5">Add Teacher to {{ course?.name }}</h4>
+  <div class="">
+    <form
+      [formGroup]="addTeacherForm"
+      (ngSubmit)="onSubmitButtonClicked()"
+      class="text-center"
+    >
+      <mat-form-field class="mb-2 mr-4">
+        <mat-label for="teacher">Teacher</mat-label>
+        <mat-select
+          formControlName="teacher"
+          name="teacher"
+          placeholder="Choose"
+        >
+          <mat-option *ngFor="let teacher of teachers" value="{{ teacher.id }}">{{ teacher.name }}
+            , {{ teacher.id }}</mat-option>
+        </mat-select>
+        <mat-error *ngIf="addTeacherForm.hasError('required', 'teacher')">
+          Teacher is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+      <button class="btn btn-primary pl-3 pr-3" type="submit">Add</button>
+      <div class="row mt-3 alert alert-danger" *ngIf="validationErrors">
+        <span class="text-danger">
+            {{validationErrors}}
+        </span>
+      </div>
+    </form>
+  </div>
+</div>
