Added functionality for adding student to course through a modal winow

--- a/src/app/course/add-student/add-student.component.html
+++ b/src/app/course/add-student/add-student.component.html
@@ -21,9 +21,9 @@
       </mat-form-field>
 
       <button class="btn btn-primary pl-3 pr-3" type="submit">Add</button>
-      <div class="row mt-3 alert alert-danger" *ngIf="validationErrors">
+      <div class="row mt-3 alert alert-danger" *ngIf="validationsErrors">
         <span class="text-danger">
-            {{validationErrors}}
+            {{validationsErrors}}
         </span>
       </div>
     </form>
