Added functionality for adding grade to student

--- a/src/app/course/course/course.component.html
+++ b/src/app/course/course/course.component.html
@@ -30,7 +30,7 @@
         <tr class="" *ngFor="let student of (course.students | studentsFilter: searchValue)">
           <td class="pointer" [routerLink]="'/profile/student/' + student.studentName">{{ student.studentName }}</td>
           <td *ngIf="userService.getRoles().includes('ROLE_TEACHER')">{{(student.gradeValue | grade) || 'None'}}
-            <span class="plus  ml-2" (click)="openAddGradeDialog(student.studentName)">
+            <span class="plus  ml-2" (click)="openAddGradeDialog(student.studentId)">
           <i class="fa fa-plus pointer fa-1-5x"></i>
         </span></td>
         </tr>
