--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -1,1 +1,43 @@
-<p>admin works!</p>
+<div class="container w-25 mt-5">
+  <h4 class="text-center mt-5 mb-5">Available actions</h4>
+  <form
+    [formGroup]="changeRoleForm"
+    (ngSubmit)="onSubmitButtonClicked()"
+    class="text-center"
+  >
+    <mat-form-field class="mb-2 w-75 mx-auto">
+      <mat-label for="user">User</mat-label>
+      <mat-select formControlName="user" name="user" placeholder="Choose">
+        <mat-option *ngFor="let user of users" value="{{ user.username }}">{{
+          user.username
+          }} ({{getRole(user)}})</mat-option>
+      </mat-select>
+      <mat-error *ngIf="changeRoleForm.hasError('required', 'user')">
+        User is <strong>required</strong>
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field class="mb-2 w-75 mx-auto">
+      <mat-label for="role">Role</mat-label>
+      <mat-select formControlName="role" name="role" placeholder="Choose">
+        <mat-option *ngFor="let role of roles" value="{{ role.authority }}">{{
+          role.authority
+          }}</mat-option>
+      </mat-select>
+      <mat-error *ngIf="changeRoleForm.hasError('required', 'role')">
+        Role is <strong>required</strong>
+      </mat-error>
+    </mat-form-field>
+    <button class="btn btn-primary text-center mt-3" type="submit">Change role</button>
+  </form>
+  <div class="row mt-3 alert alert-info" *ngIf="message">
+    <span class="text-info">
+      {{ message }}
+    </span>
+  </div>
+  <div class="row mt-3 alert alert-danger" *ngIf="validationErrors">
+    <span class="text-danger">
+      {{ validationErrors }}
+    </span>
+  </div>
+</div>
