--- a/src/app/course/add-grade/add-grade.component.html
+++ b/src/app/course/add-grade/add-grade.component.html
@@ -9,6 +9,8 @@
       <mat-form-field class="mb-2 mr-4">
         <mat-label for="grade">Grade</mat-label>
         <input
+          min="2"
+          max="6"
           matInput
           formControlName="grade"
           name="grade"
