--- a/src/app/course/courses/courses.component.html
+++ b/src/app/course/courses/courses.component.html
@@ -12,13 +12,13 @@
     </tr>
     </thead>
     <tbody>
-    <tr class="pointer" *ngFor="let course of (courses | filter: searchValue)" [routerLink]="'/courses/' + course.name">
-      <th scope="row">{{ course.id }}</th>
+    <tr class="pointer" *ngFor="let course of (courses | filter: searchValue); let i = index" [routerLink]="'/courses/' + course.id">
+      <th scope="row">{{ i + 1 }}</th>
       <td>{{ course.name }}</td>
       <td>{{ course.totalHours }}</td>
       <td>{{ course.teacherName ? course.teacherName : "None" }}</td>
       <td *ngIf="userService.getRoles().includes('ROLE_ADMIN')">
-        {{ course.averageGrade ?  (course.averageGrade | grade) : 'None' }}
+        {{ course.averageGrade ? (course.averageGrade | grade) : 'None' }}
       </td>
     </tr>
     </tbody>
