--- a/src/app/teacher/teachers-courses/teachers-courses.component.html
+++ b/src/app/teacher/teachers-courses/teachers-courses.component.html
@@ -11,12 +11,13 @@
     </tr>
     </thead>
     <tbody>
-    <tr class="pointer" *ngFor="let course of (courses | filter: searchValue)" [routerLink]="['/courses/' + course.name]">
-      <th scope="row">{{ course.id }}</th>
+    <tr class="pointer" *ngFor="let course of (courses | filter: searchValue); let i = index"
+        [routerLink]="['/courses/' + course.id]">
+      <th scope="row">{{ i + 1 }}</th>
       <td>{{ course.name }}</td>
       <td>{{ course.totalHours }}</td>
       <td *ngIf="userService.getRoles().includes('ROLE_TEACHER')">
-        {{ course.averageGrade ?  course.averageGrade.toFixed(2) : 'None' }}
+        {{ course.averageGrade ? course.averageGrade.toFixed(2) : 'None' }}
       </td>
     </tr>
     </tbody>
