--- a/src/app/course/course/course.component.html
+++ b/src/app/course/course/course.component.html
@@ -5,14 +5,17 @@
       <mat-card-subtitle>ID: {{ course.id }}</mat-card-subtitle>
       <mat-card-subtitle>Total hours: {{ course.totalHours }}</mat-card-subtitle>
       <mat-card-subtitle>Teacher: {{ course.teacherName ? course.teacherName : 'None' }}
-        <span class="plus-teacher ml-2" *ngIf="userService.getRoles().includes('ROLE_ADMIN') && !course.teacherName" (click)="openAddTeacherDialog()">
+        <span class="plus-teacher ml-2" *ngIf="userService.getRoles().includes('ROLE_ADMIN') && !course.teacherName"
+              (click)="openAddTeacherDialog()">
         <i class="fa fa-plus pointer"></i>
       </span>
-        <span class="trash ml-1 mt-5" *ngIf="userService.getRoles().includes('ROLE_ADMIN') && course.teacherName" (click)="removeTeacher()">
+        <span class="trash ml-1 mt-5" *ngIf="userService.getRoles().includes('ROLE_ADMIN') && course.teacherName"
+              (click)="removeTeacher()">
         <i class="fa fa-trash pointer fa-1-5x"></i>
       </span>
       </mat-card-subtitle>
-      <mat-card-subtitle *ngIf="userService.getRoles().includes('ROLE_TEACHER')">Average grade: {{ (course.averageGrade | grade) || 'None' }}</mat-card-subtitle>
+      <mat-card-subtitle *ngIf="userService.getRoles().includes('ROLE_TEACHER')">Average
+        grade: {{ (course.averageGrade | grade) || 'None' }}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <app-filter (eventEmitter)="searchValue=$event"></app-filter>
@@ -24,17 +27,26 @@
         <tr>
           <th scope="col">Student</th>
           <th scope="col">Grades</th>
-          <th scope="col" *ngIf="userService.getRoles().includes('ROLE_TEACHER')">Average Grade</th>
+          <th scope="col">
+            Average Grade
+          </th>
         </tr>
         </thead>
         <tbody>
         <tr class="" *ngFor="let student of (students | studentsFilter: searchValue)">
           <td class="pointer" [routerLink]="'/profile/student/' + student.studentId">{{ student.studentName }}</td>
-          <td>{{student.gradesGradeValue.join(', ')}}</td>
-          <td *ngIf="userService.getRoles().includes('ROLE_TEACHER')">{{(student.gradeValue | grade) || 'None'}}
-            <span class="plus  ml-2" (click)="openAddGradeDialog(student.studentId)">
+          <td>
+            <div *ngIf="userService.getRoles().includes('ROLE_TEACHER') || userService.getUsername() === student.username">
+            {{student.gradesGradeValue.join(', ')}}
+            <span *ngIf="userService.getRoles().includes('ROLE_TEACHER')" class="plus  ml-2" (click)="openAddGradeDialog(student.studentId)">
           <i class="fa fa-plus pointer fa-1-5x"></i>
-        </span></td>
+        </span>
+            </div></td>
+          <td>
+            <div *ngIf="userService.getRoles().includes('ROLE_TEACHER') || userService.getUsername() === student.username">
+              {{(student.gradeValue | grade) || 'None'}}
+            </div>
+            </td>
         </tr>
         </tbody>
       </table>
